[project]
name = "getdabooks"
version = "1.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "bs4>=0.0.2",
    "playwright>=1.60.0",
    "playwright-stealth>=2.0.3",
    "requests>=2.34.2",
    "response>=0.5.0",
    "urllib3>=2.7.0",
]

[project.scripts]
getdabooks = "getdabooks.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]